<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/Menu_dns_prayer"
        android:title="@string/Menu_dns_prayer"
        android:titleCondensed="@string/Menu_dns_prayer"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="1"/>
    <item android:id="@+id/Menu_dns_news"
        android:title="@string/Menu_dns_news"
        android:titleCondensed="@string/Menu_dns_news"
        android:icon="@drawable/ic_record_voice_over_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="2"/>
    <item android:id="@+id/Menu_dns_info"
        android:title="@string/Menu_dns_info"
        android:titleCondensed="@string/Menu_dns_info"
        android:icon="@drawable/ic_list_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="3"/>
    <item android:id="@+id/Menu_app_main"
        android:title="@string/Menu_app_main"
        android:titleCondensed="@string/Menu_app_main"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="4"/>
    <item android:id="@+id/Menu_dns_contact"
        android:title="@string/Menu_dns_contact"
        android:titleCondensed="@string/Menu_dns_contact"
        android:icon="@drawable/ic_email_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="5"/>
    <item android:id="@+id/Menu_dns_groupsmat"
        android:title="@string/Menu_dns_groupsmat"
        android:titleCondensed="@string/Menu_dns_groupsmat"
        android:icon="@drawable/ic_email_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="6"/>
    <item android:id="@+id/Menu_dns_configuration"
        android:title="@string/Menu_dns_configuration"
        android:titleCondensed="@string/Menu_dns_contact"
        android:icon="@drawable/ic_email_black_24dp"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:orderInCategory="7"/>
</menu>