<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    android:paddingLeft="2dp"
    android:paddingBottom="2dp"
    android:paddingRight="2dp"
    android:background="#FFF6D0"
    android:id="@+id/activity_main_screen">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingLeft="2dp"
            android:paddingBottom="2dp"
            android:paddingRight="2dp">
            <TextView
                android:id="@+id/IntroDNS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="2dp"
                android:paddingRight="20dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:text="@string/IntroDNS" />
            <TextView
                android:id="@+id/DescDNS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="2dp"
                android:paddingRight="20dp"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_below="@id/IntroDNS"
                android:text="@string/DescDNS" />
            <ImageView
                android:id="@+id/DNS"
                android:layout_centerHorizontal="true"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_below="@id/DescDNS"
                android:src="@drawable/dnsmalelogo"/>
            <TextView
                android:id="@+id/Mt7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="2dp"
                android:paddingRight="20dp"
                android:textStyle="italic"
                android:layout_below="@id/DNS"
                android:text="@string/Mt7" />
            <TextView
                android:id="@+id/Mt7_sigla"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="2dp"
                android:paddingRight="20dp"
                android:textStyle="bold"
                android:layout_below="@id/Mt7"
                android:text="@string/Mt7_sigla" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>