<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    android:paddingLeft="2dp"
    android:paddingBottom="2dp"
    android:paddingRight="2dp"
    android:background="#FFF6D0">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingLeft="2dp"
            android:paddingBottom="2dp"
            android:paddingRight="2dp">
            <TextView
                android:id="@+id/IntroDNS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="2dp"
                android:paddingRight="20dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:text="@string/title_activity_contact" />
            <TextView
                android:id="@+id/ContactInvit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="20dp"
                android:paddingRight="20dp"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_below="@id/IntroDNS"
                android:text="@string/contact_invitation" />
            <TextView
                android:id="@+id/ContactInvit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="20dp"
                android:paddingBottom="30dp"
                android:paddingRight="20dp"
                android:textSize="16dp"
                android:textAlignment="center"
                android:layout_below="@id/ContactInvit"
                android:text="@string/contact_invitation2" />
            <LinearLayout
                android:id="@+id/layoutbuttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/ContactInvit2">
                <ImageView
                    android:id="@+id/fb"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:src="@mipmap/ic_fb"/>
                <ImageView
                    android:id="@+id/www"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:src="@mipmap/ic_www"/>
                <ImageView
                    android:id="@+id/mail"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:src="@mipmap/ic_mail"/>
            </LinearLayout>


            <Button
                android:id="@+id/logoutbutton"
                android:layout_below="@id/layoutbuttons"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Wyloguj ze strony WWW"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>